Refactor DTOs and make get and post Quality Factors API