@@ -5,11 +5,11 @@ import com.fasterxml.jackson.databind.ObjectWriter;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.google.gson.Gson;
 import com.upc.gessi.qrapids.app.domain.controllers.MetricsController;
-import com.upc.gessi.qrapids.app.domain.controllers.QualityFactorsController;
+import com.upc.gessi.qrapids.app.domain.controllers.FactorsController;
 import com.upc.gessi.qrapids.app.domain.models.QFCategory;
-import com.upc.gessi.qrapids.app.presentation.rest.dto.DTOFactor;
-import com.upc.gessi.qrapids.app.presentation.rest.dto.DTOMetric;
-import com.upc.gessi.qrapids.app.presentation.rest.dto.DTOQualityFactor;
+import com.upc.gessi.qrapids.app.presentation.rest.dto.DTOFactorEvaluation;
+import com.upc.gessi.qrapids.app.presentation.rest.dto.DTOMetricEvaluation;
+import com.upc.gessi.qrapids.app.presentation.rest.dto.DTODetailedFactorEvaluation;
 import com.upc.gessi.qrapids.app.domain.exceptions.CategoriesException;
 import com.upc.gessi.qrapids.app.testHelpers.DomainObjectsBuilder;
 import com.upc.gessi.qrapids.app.testHelpers.HelperFunctions;
@@ -44,7 +44,7 @@ import static org.springframework.restdocs.request.RequestDocumentation.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-public class QualityFactorsTest {
+public class FactorEvaluationTest {
 
     private DomainObjectsBuilder domainObjectsBuilder;
 
@@ -54,13 +54,13 @@ public class QualityFactorsTest {
     public JUnitRestDocumentation restDocumentation = new JUnitRestDocumentation();
 
     @Mock
-    private QualityFactorsController qualityFactorsDomainController;
+    private FactorsController qualityFactorsDomainController;
 
     @Mock
     private MetricsController metricsDomainController;
 
     @InjectMocks
-    private QualityFactors factorsController;
+    private Factors factorsController;
 
     @Before
     public void setUp() {
@@ -175,12 +175,12 @@ public class QualityFactorsTest {
     @Test
     public void getQualityFactorsEvaluations() throws Exception {
         // Given
-        DTOQualityFactor dtoQualityFactor = domainObjectsBuilder.buildDTOQualityFactor();
-        List<DTOQualityFactor> dtoQualityFactorList = new ArrayList<>();
-        dtoQualityFactorList.add(dtoQualityFactor);
+        DTODetailedFactorEvaluation dtoDetailedFactorEvaluation = domainObjectsBuilder.buildDTOQualityFactor();
+        List<DTODetailedFactorEvaluation> dtoDetailedFactorEvaluationList = new ArrayList<>();
+        dtoDetailedFactorEvaluationList.add(dtoDetailedFactorEvaluation);
 
         String projectExternalId = "test";
-        when(qualityFactorsDomainController.getAllFactorsWithMetricsCurrentEvaluation(projectExternalId)).thenReturn(dtoQualityFactorList);
+        when(qualityFactorsDomainController.getAllFactorsWithMetricsCurrentEvaluation(projectExternalId)).thenReturn(dtoDetailedFactorEvaluationList);
 
         // Perform request
         RequestBuilder requestBuilder = MockMvcRequestBuilders
@@ -190,18 +190,18 @@ public class QualityFactorsTest {
         this.mockMvc.perform(requestBuilder)
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].id", is(dtoQualityFactor.getId())))
-                .andExpect(jsonPath("$[0].name", is(dtoQualityFactor.getName())))
-                .andExpect(jsonPath("$[0].metrics[0].id", is(dtoQualityFactor.getMetrics().get(0).getId())))
-                .andExpect(jsonPath("$[0].metrics[0].name", is(dtoQualityFactor.getMetrics().get(0).getName())))
-                .andExpect(jsonPath("$[0].metrics[0].description", is(dtoQualityFactor.getMetrics().get(0).getDescription())))
-                .andExpect(jsonPath("$[0].metrics[0].value", is(HelperFunctions.getFloatAsDouble(dtoQualityFactor.getMetrics().get(0).getValue()))))
-                .andExpect(jsonPath("$[0].metrics[0].value_description", is(String.format("%.2f", dtoQualityFactor.getMetrics().get(0).getValue()))))
-                .andExpect(jsonPath("$[0].metrics[0].date[0]", is(dtoQualityFactor.getMetrics().get(0).getDate().getYear())))
-                .andExpect(jsonPath("$[0].metrics[0].date[1]", is(dtoQualityFactor.getMetrics().get(0).getDate().getMonthValue())))
-                .andExpect(jsonPath("$[0].metrics[0].date[2]", is(dtoQualityFactor.getMetrics().get(0).getDate().getDayOfMonth())))
+                .andExpect(jsonPath("$[0].id", is(dtoDetailedFactorEvaluation.getId())))
+                .andExpect(jsonPath("$[0].name", is(dtoDetailedFactorEvaluation.getName())))
+                .andExpect(jsonPath("$[0].metrics[0].id", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getId())))
+                .andExpect(jsonPath("$[0].metrics[0].name", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getName())))
+                .andExpect(jsonPath("$[0].metrics[0].description", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDescription())))
+                .andExpect(jsonPath("$[0].metrics[0].value", is(HelperFunctions.getFloatAsDouble(dtoDetailedFactorEvaluation.getMetrics().get(0).getValue()))))
+                .andExpect(jsonPath("$[0].metrics[0].value_description", is(String.format("%.2f", dtoDetailedFactorEvaluation.getMetrics().get(0).getValue()))))
+                .andExpect(jsonPath("$[0].metrics[0].date[0]", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDate().getYear())))
+                .andExpect(jsonPath("$[0].metrics[0].date[1]", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDate().getMonthValue())))
+                .andExpect(jsonPath("$[0].metrics[0].date[2]", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDate().getDayOfMonth())))
                 .andExpect(jsonPath("$[0].metrics[0].datasource", is(nullValue())))
-                .andExpect(jsonPath("$[0].metrics[0].rationale", is(dtoQualityFactor.getMetrics().get(0).getRationale())))
+                .andExpect(jsonPath("$[0].metrics[0].rationale", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getRationale())))
                 .andExpect(jsonPath("$[0].metrics[0].confidence80", is(nullValue())))
                 .andExpect(jsonPath("$[0].metrics[0].confidence95", is(nullValue())))
                 .andExpect(jsonPath("$[0].metrics[0].forecastingError", is(nullValue())))
@@ -251,30 +251,30 @@ public class QualityFactorsTest {
     @Test
     public void getSingleFactorEvaluation() throws Exception {
         // Given
-        DTOFactor dtoFactor = domainObjectsBuilder.buildDTOFactor();
+        DTOFactorEvaluation dtoFactorEvaluation = domainObjectsBuilder.buildDTOFactor();
         String projectExternalId = "test";
-        when(qualityFactorsDomainController.getSingleFactorEvaluation(dtoFactor.getId(), projectExternalId)).thenReturn(dtoFactor);
+        when(qualityFactorsDomainController.getSingleFactorEvaluation(dtoFactorEvaluation.getId(), projectExternalId)).thenReturn(dtoFactorEvaluation);
 
         // Perform request
         RequestBuilder requestBuilder = RestDocumentationRequestBuilders
-                .get("/api/qualityFactors/{id}", dtoFactor.getId())
+                .get("/api/qualityFactors/{id}", dtoFactorEvaluation.getId())
                 .param("prj", projectExternalId);
 
         this.mockMvc.perform(requestBuilder)
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id", is(dtoFactor.getId())))
-                .andExpect(jsonPath("$.name", is(dtoFactor.getName())))
-                .andExpect(jsonPath("$.description", is(dtoFactor.getDescription())))
-                .andExpect(jsonPath("$.value", is(HelperFunctions.getFloatAsDouble(dtoFactor.getValue()))))
-                .andExpect(jsonPath("$.value_description", is(String.format("%.2f", dtoFactor.getValue()))))
-                .andExpect(jsonPath("$.date[0]", is(dtoFactor.getDate().getYear())))
-                .andExpect(jsonPath("$.date[1]", is(dtoFactor.getDate().getMonthValue())))
-                .andExpect(jsonPath("$.date[2]", is(dtoFactor.getDate().getDayOfMonth())))
+                .andExpect(jsonPath("$.id", is(dtoFactorEvaluation.getId())))
+                .andExpect(jsonPath("$.name", is(dtoFactorEvaluation.getName())))
+                .andExpect(jsonPath("$.description", is(dtoFactorEvaluation.getDescription())))
+                .andExpect(jsonPath("$.value", is(HelperFunctions.getFloatAsDouble(dtoFactorEvaluation.getValue()))))
+                .andExpect(jsonPath("$.value_description", is(String.format("%.2f", dtoFactorEvaluation.getValue()))))
+                .andExpect(jsonPath("$.date[0]", is(dtoFactorEvaluation.getDate().getYear())))
+                .andExpect(jsonPath("$.date[1]", is(dtoFactorEvaluation.getDate().getMonthValue())))
+                .andExpect(jsonPath("$.date[2]", is(dtoFactorEvaluation.getDate().getDayOfMonth())))
                 .andExpect(jsonPath("$.datasource", is(nullValue())))
-                .andExpect(jsonPath("$.rationale", is(dtoFactor.getRationale())))
+                .andExpect(jsonPath("$.rationale", is(dtoFactorEvaluation.getRationale())))
                 .andExpect(jsonPath("$.forecastingError", is(nullValue())))
-                .andExpect(jsonPath("$.strategicIndicators[0]", is(dtoFactor.getStrategicIndicators().get(0))))
-                .andExpect(jsonPath("$.formattedDate", is(dtoFactor.getDate().toString())))
+                .andExpect(jsonPath("$.strategicIndicators[0]", is(dtoFactorEvaluation.getStrategicIndicators().get(0))))
+                .andExpect(jsonPath("$.formattedDate", is(dtoFactorEvaluation.getDate().toString())))
                 .andDo(document("qf/single",
                         preprocessRequest(prettyPrint()),
                         preprocessResponse(prettyPrint()),
@@ -312,21 +312,21 @@ public class QualityFactorsTest {
 
 
         // Verify mock interactions
-        verify(qualityFactorsDomainController, times(1)).getSingleFactorEvaluation(dtoFactor.getId(), projectExternalId);
+        verify(qualityFactorsDomainController, times(1)).getSingleFactorEvaluation(dtoFactorEvaluation.getId(), projectExternalId);
         verifyNoMoreInteractions(qualityFactorsDomainController);
     }
 
     @Test
     public void getQualityFactorsHistoricalData() throws Exception {
         // Given
-        DTOQualityFactor dtoQualityFactor = domainObjectsBuilder.buildDTOQualityFactor();
-        List<DTOQualityFactor> dtoQualityFactorList = new ArrayList<>();
-        dtoQualityFactorList.add(dtoQualityFactor);
+        DTODetailedFactorEvaluation dtoDetailedFactorEvaluation = domainObjectsBuilder.buildDTOQualityFactor();
+        List<DTODetailedFactorEvaluation> dtoDetailedFactorEvaluationList = new ArrayList<>();
+        dtoDetailedFactorEvaluationList.add(dtoDetailedFactorEvaluation);
 
         String projectExternalId = "test";
-        LocalDate from = dtoQualityFactor.getMetrics().get(0).getDate().minusDays(7);
-        LocalDate to = dtoQualityFactor.getMetrics().get(0).getDate();
-        when(qualityFactorsDomainController.getAllFactorsWithMetricsHistoricalEvaluation(projectExternalId, from, to)).thenReturn(dtoQualityFactorList);
+        LocalDate from = dtoDetailedFactorEvaluation.getMetrics().get(0).getDate().minusDays(7);
+        LocalDate to = dtoDetailedFactorEvaluation.getMetrics().get(0).getDate();
+        when(qualityFactorsDomainController.getAllFactorsWithMetricsHistoricalEvaluation(projectExternalId, from, to)).thenReturn(dtoDetailedFactorEvaluationList);
 
         // Perform request
         RequestBuilder requestBuilder = MockMvcRequestBuilders
@@ -338,18 +338,18 @@ public class QualityFactorsTest {
         this.mockMvc.perform(requestBuilder)
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].id", is(dtoQualityFactor.getId())))
-                .andExpect(jsonPath("$[0].name", is(dtoQualityFactor.getName())))
-                .andExpect(jsonPath("$[0].metrics[0].id", is(dtoQualityFactor.getMetrics().get(0).getId())))
-                .andExpect(jsonPath("$[0].metrics[0].name", is(dtoQualityFactor.getMetrics().get(0).getName())))
-                .andExpect(jsonPath("$[0].metrics[0].description", is(dtoQualityFactor.getMetrics().get(0).getDescription())))
-                .andExpect(jsonPath("$[0].metrics[0].value", is(HelperFunctions.getFloatAsDouble(dtoQualityFactor.getMetrics().get(0).getValue()))))
-                .andExpect(jsonPath("$[0].metrics[0].value_description", is(String.format("%.2f", dtoQualityFactor.getMetrics().get(0).getValue()))))
-                .andExpect(jsonPath("$[0].metrics[0].date[0]", is(dtoQualityFactor.getMetrics().get(0).getDate().getYear())))
-                .andExpect(jsonPath("$[0].metrics[0].date[1]", is(dtoQualityFactor.getMetrics().get(0).getDate().getMonthValue())))
-                .andExpect(jsonPath("$[0].metrics[0].date[2]", is(dtoQualityFactor.getMetrics().get(0).getDate().getDayOfMonth())))
+                .andExpect(jsonPath("$[0].id", is(dtoDetailedFactorEvaluation.getId())))
+                .andExpect(jsonPath("$[0].name", is(dtoDetailedFactorEvaluation.getName())))
+                .andExpect(jsonPath("$[0].metrics[0].id", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getId())))
+                .andExpect(jsonPath("$[0].metrics[0].name", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getName())))
+                .andExpect(jsonPath("$[0].metrics[0].description", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDescription())))
+                .andExpect(jsonPath("$[0].metrics[0].value", is(HelperFunctions.getFloatAsDouble(dtoDetailedFactorEvaluation.getMetrics().get(0).getValue()))))
+                .andExpect(jsonPath("$[0].metrics[0].value_description", is(String.format("%.2f", dtoDetailedFactorEvaluation.getMetrics().get(0).getValue()))))
+                .andExpect(jsonPath("$[0].metrics[0].date[0]", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDate().getYear())))
+                .andExpect(jsonPath("$[0].metrics[0].date[1]", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDate().getMonthValue())))
+                .andExpect(jsonPath("$[0].metrics[0].date[2]", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDate().getDayOfMonth())))
                 .andExpect(jsonPath("$[0].metrics[0].datasource", is(nullValue())))
-                .andExpect(jsonPath("$[0].metrics[0].rationale", is(dtoQualityFactor.getMetrics().get(0).getRationale())))
+                .andExpect(jsonPath("$[0].metrics[0].rationale", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getRationale())))
                 .andExpect(jsonPath("$[0].metrics[0].confidence80", is(nullValue())))
                 .andExpect(jsonPath("$[0].metrics[0].confidence95", is(nullValue())))
                 .andExpect(jsonPath("$[0].metrics[0].forecastingError", is(nullValue())))
@@ -403,11 +403,11 @@ public class QualityFactorsTest {
     @Test
     public void getAllQualityFactors() throws Exception {
         // Given
-        DTOFactor dtoFactor = domainObjectsBuilder.buildDTOFactor();
-        List<DTOFactor> dtoFactorList = new ArrayList<>();
-        dtoFactorList.add(dtoFactor);
+        DTOFactorEvaluation dtoFactorEvaluation = domainObjectsBuilder.buildDTOFactor();
+        List<DTOFactorEvaluation> dtoFactorEvaluationList = new ArrayList<>();
+        dtoFactorEvaluationList.add(dtoFactorEvaluation);
         String projectExternalId = "test";
-        when(qualityFactorsDomainController.getAllFactorsEvaluation(projectExternalId)).thenReturn(dtoFactorList);
+        when(qualityFactorsDomainController.getAllFactorsEvaluation(projectExternalId)).thenReturn(dtoFactorEvaluationList);
 
         // Perform request
         RequestBuilder requestBuilder = RestDocumentationRequestBuilders
@@ -417,19 +417,19 @@ public class QualityFactorsTest {
         this.mockMvc.perform(requestBuilder)
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].id", is(dtoFactor.getId())))
-                .andExpect(jsonPath("$[0].name", is(dtoFactor.getName())))
-                .andExpect(jsonPath("$[0].description", is(dtoFactor.getDescription())))
-                .andExpect(jsonPath("$[0].value", is(HelperFunctions.getFloatAsDouble(dtoFactor.getValue()))))
-                .andExpect(jsonPath("$[0].value_description", is(String.format("%.2f", dtoFactor.getValue()))))
-                .andExpect(jsonPath("$[0].date[0]", is(dtoFactor.getDate().getYear())))
-                .andExpect(jsonPath("$[0].date[1]", is(dtoFactor.getDate().getMonthValue())))
-                .andExpect(jsonPath("$[0].date[2]", is(dtoFactor.getDate().getDayOfMonth())))
+                .andExpect(jsonPath("$[0].id", is(dtoFactorEvaluation.getId())))
+                .andExpect(jsonPath("$[0].name", is(dtoFactorEvaluation.getName())))
+                .andExpect(jsonPath("$[0].description", is(dtoFactorEvaluation.getDescription())))
+                .andExpect(jsonPath("$[0].value", is(HelperFunctions.getFloatAsDouble(dtoFactorEvaluation.getValue()))))
+                .andExpect(jsonPath("$[0].value_description", is(String.format("%.2f", dtoFactorEvaluation.getValue()))))
+                .andExpect(jsonPath("$[0].date[0]", is(dtoFactorEvaluation.getDate().getYear())))
+                .andExpect(jsonPath("$[0].date[1]", is(dtoFactorEvaluation.getDate().getMonthValue())))
+                .andExpect(jsonPath("$[0].date[2]", is(dtoFactorEvaluation.getDate().getDayOfMonth())))
                 .andExpect(jsonPath("$[0].datasource", is(nullValue())))
-                .andExpect(jsonPath("$[0].rationale", is(dtoFactor.getRationale())))
+                .andExpect(jsonPath("$[0].rationale", is(dtoFactorEvaluation.getRationale())))
                 .andExpect(jsonPath("$[0].forecastingError", is(nullValue())))
-                .andExpect(jsonPath("$[0].strategicIndicators[0]", is(dtoFactor.getStrategicIndicators().get(0))))
-                .andExpect(jsonPath("$[0].formattedDate", is(dtoFactor.getDate().toString())))
+                .andExpect(jsonPath("$[0].strategicIndicators[0]", is(dtoFactorEvaluation.getStrategicIndicators().get(0))))
+                .andExpect(jsonPath("$[0].formattedDate", is(dtoFactorEvaluation.getDate().toString())))
                 .andDo(document("qf/all",
                         preprocessRequest(prettyPrint()),
                         preprocessResponse(prettyPrint()),
@@ -469,15 +469,15 @@ public class QualityFactorsTest {
 
     @Test
     public void getQualityFactorsPrediction() throws Exception {
-        DTOQualityFactor dtoQualityFactor = domainObjectsBuilder.buildDTOQualityFactorForPrediction();
-        List<DTOQualityFactor> dtoQualityFactorList = new ArrayList<>();
-        dtoQualityFactorList.add(dtoQualityFactor);
+        DTODetailedFactorEvaluation dtoDetailedFactorEvaluation = domainObjectsBuilder.buildDTOQualityFactorForPrediction();
+        List<DTODetailedFactorEvaluation> dtoDetailedFactorEvaluationList = new ArrayList<>();
+        dtoDetailedFactorEvaluationList.add(dtoDetailedFactorEvaluation);
         String projectExternalId = "test";
         String freq = "7";
         String horizon = "7";
         String technique = "PROPHET";
-        when(qualityFactorsDomainController.getAllFactorsWithMetricsCurrentEvaluation(projectExternalId)).thenReturn(dtoQualityFactorList);
-        when(qualityFactorsDomainController.getFactorsWithMetricsPrediction(dtoQualityFactorList, technique, freq, horizon, projectExternalId)).thenReturn(dtoQualityFactorList);
+        when(qualityFactorsDomainController.getAllFactorsWithMetricsCurrentEvaluation(projectExternalId)).thenReturn(dtoDetailedFactorEvaluationList);
+        when(qualityFactorsDomainController.getFactorsWithMetricsPrediction(dtoDetailedFactorEvaluationList, technique, freq, horizon, projectExternalId)).thenReturn(dtoDetailedFactorEvaluationList);
 
         // Perform request
         RequestBuilder requestBuilder = MockMvcRequestBuilders
@@ -489,22 +489,22 @@ public class QualityFactorsTest {
         this.mockMvc.perform(requestBuilder)
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].id", is(dtoQualityFactor.getId())))
-                .andExpect(jsonPath("$[0].name", is(dtoQualityFactor.getName())))
-                .andExpect(jsonPath("$[0].metrics[0].id", is(dtoQualityFactor.getMetrics().get(0).getId())))
-                .andExpect(jsonPath("$[0].metrics[0].name", is(dtoQualityFactor.getMetrics().get(0).getName())))
-                .andExpect(jsonPath("$[0].metrics[0].description", is(dtoQualityFactor.getMetrics().get(0).getDescription())))
-                .andExpect(jsonPath("$[0].metrics[0].value", is(HelperFunctions.getFloatAsDouble(dtoQualityFactor.getMetrics().get(0).getValue()))))
-                .andExpect(jsonPath("$[0].metrics[0].value_description", is(String.format("%.2f", dtoQualityFactor.getMetrics().get(0).getValue()))))
-                .andExpect(jsonPath("$[0].metrics[0].date[0]", is(dtoQualityFactor.getMetrics().get(0).getDate().getYear())))
-                .andExpect(jsonPath("$[0].metrics[0].date[1]", is(dtoQualityFactor.getMetrics().get(0).getDate().getMonthValue())))
-                .andExpect(jsonPath("$[0].metrics[0].date[2]", is(dtoQualityFactor.getMetrics().get(0).getDate().getDayOfMonth())))
-                .andExpect(jsonPath("$[0].metrics[0].datasource", is(dtoQualityFactor.getMetrics().get(0).getDatasource())))
-                .andExpect(jsonPath("$[0].metrics[0].rationale", is(dtoQualityFactor.getMetrics().get(0).getRationale())))
-                .andExpect(jsonPath("$[0].metrics[0].confidence80.first", is(HelperFunctions.getFloatAsDouble(dtoQualityFactor.getMetrics().get(0).getConfidence80().getFirst()))))
-                .andExpect(jsonPath("$[0].metrics[0].confidence80.second", is(HelperFunctions.getFloatAsDouble(dtoQualityFactor.getMetrics().get(0).getConfidence80().getSecond()))))
-                .andExpect(jsonPath("$[0].metrics[0].confidence95.first", is(HelperFunctions.getFloatAsDouble(dtoQualityFactor.getMetrics().get(0).getConfidence95().getFirst()))))
-                .andExpect(jsonPath("$[0].metrics[0].confidence95.second", is(HelperFunctions.getFloatAsDouble(dtoQualityFactor.getMetrics().get(0).getConfidence95().getSecond()))))
+                .andExpect(jsonPath("$[0].id", is(dtoDetailedFactorEvaluation.getId())))
+                .andExpect(jsonPath("$[0].name", is(dtoDetailedFactorEvaluation.getName())))
+                .andExpect(jsonPath("$[0].metrics[0].id", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getId())))
+                .andExpect(jsonPath("$[0].metrics[0].name", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getName())))
+                .andExpect(jsonPath("$[0].metrics[0].description", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDescription())))
+                .andExpect(jsonPath("$[0].metrics[0].value", is(HelperFunctions.getFloatAsDouble(dtoDetailedFactorEvaluation.getMetrics().get(0).getValue()))))
+                .andExpect(jsonPath("$[0].metrics[0].value_description", is(String.format("%.2f", dtoDetailedFactorEvaluation.getMetrics().get(0).getValue()))))
+                .andExpect(jsonPath("$[0].metrics[0].date[0]", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDate().getYear())))
+                .andExpect(jsonPath("$[0].metrics[0].date[1]", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDate().getMonthValue())))
+                .andExpect(jsonPath("$[0].metrics[0].date[2]", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDate().getDayOfMonth())))
+                .andExpect(jsonPath("$[0].metrics[0].datasource", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getDatasource())))
+                .andExpect(jsonPath("$[0].metrics[0].rationale", is(dtoDetailedFactorEvaluation.getMetrics().get(0).getRationale())))
+                .andExpect(jsonPath("$[0].metrics[0].confidence80.first", is(HelperFunctions.getFloatAsDouble(dtoDetailedFactorEvaluation.getMetrics().get(0).getConfidence80().getFirst()))))
+                .andExpect(jsonPath("$[0].metrics[0].confidence80.second", is(HelperFunctions.getFloatAsDouble(dtoDetailedFactorEvaluation.getMetrics().get(0).getConfidence80().getSecond()))))
+                .andExpect(jsonPath("$[0].metrics[0].confidence95.first", is(HelperFunctions.getFloatAsDouble(dtoDetailedFactorEvaluation.getMetrics().get(0).getConfidence95().getFirst()))))
+                .andExpect(jsonPath("$[0].metrics[0].confidence95.second", is(HelperFunctions.getFloatAsDouble(dtoDetailedFactorEvaluation.getMetrics().get(0).getConfidence95().getSecond()))))
                 .andExpect(jsonPath("$[0].metrics[0].forecastingError", is(nullValue())))
                 .andDo(document("qf/prediction",
                         preprocessRequest(prettyPrint()),
@@ -558,14 +558,14 @@ public class QualityFactorsTest {
 
         // Verify mock interactions
         verify(qualityFactorsDomainController, times(1)).getAllFactorsWithMetricsCurrentEvaluation(projectExternalId);
-        verify(qualityFactorsDomainController, times(1)).getFactorsWithMetricsPrediction(dtoQualityFactorList, technique, freq, horizon, projectExternalId);
+        verify(qualityFactorsDomainController, times(1)).getFactorsWithMetricsPrediction(dtoDetailedFactorEvaluationList, technique, freq, horizon, projectExternalId);
     }
 
     @Test
     public void simulate() throws Exception {
-        DTOFactor dtoFactor = domainObjectsBuilder.buildDTOFactor();
-        List<DTOFactor> dtoFactorList = new ArrayList<>();
-        dtoFactorList.add(dtoFactor);
+        DTOFactorEvaluation dtoFactorEvaluation = domainObjectsBuilder.buildDTOFactor();
+        List<DTOFactorEvaluation> dtoFactorEvaluationList = new ArrayList<>();
+        dtoFactorEvaluationList.add(dtoFactorEvaluation);
 
         String projectExternalId = "test";
         String metricId = "fasttests";
@@ -580,7 +580,7 @@ public class QualityFactorsTest {
         Map<String, Float> metricsMap = new HashMap<>();
         metricsMap.put(metricId, metricValue);
 
-        when(qualityFactorsDomainController.simulate(metricsMap, projectExternalId, LocalDate.parse(date))).thenReturn(dtoFactorList);
+        when(qualityFactorsDomainController.simulate(metricsMap, projectExternalId, LocalDate.parse(date))).thenReturn(dtoFactorEvaluationList);
 
         ObjectMapper mapper = new ObjectMapper();
         mapper.configure(SerializationFeature.WRAP_ROOT_VALUE, false);
@@ -597,19 +597,19 @@ public class QualityFactorsTest {
         this.mockMvc.perform(requestBuilder)
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(1)))
-                .andExpect(jsonPath("$[0].id", is(dtoFactor.getId())))
-                .andExpect(jsonPath("$[0].name", is(dtoFactor.getName())))
-                .andExpect(jsonPath("$[0].description", is(dtoFactor.getDescription())))
-                .andExpect(jsonPath("$[0].value", is(HelperFunctions.getFloatAsDouble(dtoFactor.getValue()))))
-                .andExpect(jsonPath("$[0].value_description", is(String.format("%.2f", dtoFactor.getValue()))))
-                .andExpect(jsonPath("$[0].date[0]", is(dtoFactor.getDate().getYear())))
-                .andExpect(jsonPath("$[0].date[1]", is(dtoFactor.getDate().getMonthValue())))
-                .andExpect(jsonPath("$[0].date[2]", is(dtoFactor.getDate().getDayOfMonth())))
+                .andExpect(jsonPath("$[0].id", is(dtoFactorEvaluation.getId())))
+                .andExpect(jsonPath("$[0].name", is(dtoFactorEvaluation.getName())))
+                .andExpect(jsonPath("$[0].description", is(dtoFactorEvaluation.getDescription())))
+                .andExpect(jsonPath("$[0].value", is(HelperFunctions.getFloatAsDouble(dtoFactorEvaluation.getValue()))))
+                .andExpect(jsonPath("$[0].value_description", is(String.format("%.2f", dtoFactorEvaluation.getValue()))))
+                .andExpect(jsonPath("$[0].date[0]", is(dtoFactorEvaluation.getDate().getYear())))
+                .andExpect(jsonPath("$[0].date[1]", is(dtoFactorEvaluation.getDate().getMonthValue())))
+                .andExpect(jsonPath("$[0].date[2]", is(dtoFactorEvaluation.getDate().getDayOfMonth())))
                 .andExpect(jsonPath("$[0].datasource", is(nullValue())))
-                .andExpect(jsonPath("$[0].rationale", is(dtoFactor.getRationale())))
+                .andExpect(jsonPath("$[0].rationale", is(dtoFactorEvaluation.getRationale())))
                 .andExpect(jsonPath("$[0].forecastingError", is(nullValue())))
-                .andExpect(jsonPath("$[0].strategicIndicators[0]", is(dtoFactor.getStrategicIndicators().get(0))))
-                .andExpect(jsonPath("$[0].formattedDate", is(dtoFactor.getDate().toString())))
+                .andExpect(jsonPath("$[0].strategicIndicators[0]", is(dtoFactorEvaluation.getStrategicIndicators().get(0))))
+                .andExpect(jsonPath("$[0].formattedDate", is(dtoFactorEvaluation.getDate().toString())))
                 .andDo(document("qf/simulation",
                         preprocessRequest(prettyPrint()),
                         preprocessResponse(prettyPrint()),
@@ -657,12 +657,12 @@ public class QualityFactorsTest {
     @Test
     public void getMetricsEvaluationForQF() throws Exception {
         // Given
-        DTOMetric dtoMetric = domainObjectsBuilder.buildDTOMetric();
-        List<DTOMetric> dtoMetricList = new ArrayList<>();
-        dtoMetricList.add(dtoMetric);
+        DTOMetricEvaluation dtoMetricEvaluation = domainObjectsBuilder.buildDTOMetric();
+        List<DTOMetricEvaluation> dtoMetricEvaluationList = new ArrayList<>();
+        dtoMetricEvaluationList.add(dtoMetricEvaluation);
         String factorId = "testingperformance";
         String projectExternalId = "test";
-        when(metricsDomainController.getMetricsForQualityFactorCurrentEvaluation(factorId, projectExternalId)).thenReturn(dtoMetricList);
+        when(metricsDomainController.getMetricsForQualityFactorCurrentEvaluation(factorId, projectExternalId)).thenReturn(dtoMetricEvaluationList);
 
         // Perform request
         RequestBuilder requestBuilder = RestDocumentationRequestBuilders
@@ -671,16 +671,16 @@ public class QualityFactorsTest {
 
         this.mockMvc.perform(requestBuilder)
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id", is(dtoMetric.getId())))
-                .andExpect(jsonPath("$[0].name", is(dtoMetric.getName())))
-                .andExpect(jsonPath("$[0].description", is(dtoMetric.getDescription())))
-                .andExpect(jsonPath("$[0].value", is(HelperFunctions.getFloatAsDouble(dtoMetric.getValue()))))
-                .andExpect(jsonPath("$[0].value_description", is(String.format("%.2f", dtoMetric.getValue()))))
-                .andExpect(jsonPath("$[0].date[0]", is(dtoMetric.getDate().getYear())))
-                .andExpect(jsonPath("$[0].date[1]", is(dtoMetric.getDate().getMonthValue())))
-                .andExpect(jsonPath("$[0].date[2]", is(dtoMetric.getDate().getDayOfMonth())))
+                .andExpect(jsonPath("$[0].id", is(dtoMetricEvaluation.getId())))
+                .andExpect(jsonPath("$[0].name", is(dtoMetricEvaluation.getName())))
+                .andExpect(jsonPath("$[0].description", is(dtoMetricEvaluation.getDescription())))
+                .andExpect(jsonPath("$[0].value", is(HelperFunctions.getFloatAsDouble(dtoMetricEvaluation.getValue()))))
+                .andExpect(jsonPath("$[0].value_description", is(String.format("%.2f", dtoMetricEvaluation.getValue()))))
+                .andExpect(jsonPath("$[0].date[0]", is(dtoMetricEvaluation.getDate().getYear())))
+                .andExpect(jsonPath("$[0].date[1]", is(dtoMetricEvaluation.getDate().getMonthValue())))
+                .andExpect(jsonPath("$[0].date[2]", is(dtoMetricEvaluation.getDate().getDayOfMonth())))
                 .andExpect(jsonPath("$[0].datasource", is(nullValue())))
-                .andExpect(jsonPath("$[0].rationale", is(dtoMetric.getRationale())))
+                .andExpect(jsonPath("$[0].rationale", is(dtoMetricEvaluation.getRationale())))
                 .andExpect(jsonPath("$[0].confidence80", is(nullValue())))
                 .andExpect(jsonPath("$[0].confidence95", is(nullValue())))
                 .andExpect(jsonPath("$[0].forecastingError", is(nullValue())))
@@ -727,14 +727,14 @@ public class QualityFactorsTest {
     @Test
     public void getMetricsHistoricalDataForQF() throws Exception {
         // Given
-        DTOMetric dtoMetric = domainObjectsBuilder.buildDTOMetric();
-        List<DTOMetric> dtoMetricList = new ArrayList<>();
-        dtoMetricList.add(dtoMetric);
+        DTOMetricEvaluation dtoMetricEvaluation = domainObjectsBuilder.buildDTOMetric();
+        List<DTOMetricEvaluation> dtoMetricEvaluationList = new ArrayList<>();
+        dtoMetricEvaluationList.add(dtoMetricEvaluation);
         String factorId = "testingperformance";
         String projectExternalId = "test";
         String dateFrom = "2019-07-07";
         String dateTo = "2019-07-15";
-        when(metricsDomainController.getMetricsForQualityFactorHistoricalEvaluation(factorId, projectExternalId, LocalDate.parse(dateFrom), LocalDate.parse(dateTo))).thenReturn(dtoMetricList);
+        when(metricsDomainController.getMetricsForQualityFactorHistoricalEvaluation(factorId, projectExternalId, LocalDate.parse(dateFrom), LocalDate.parse(dateTo))).thenReturn(dtoMetricEvaluationList);
 
         // Perform request
         RequestBuilder requestBuilder = RestDocumentationRequestBuilders
@@ -745,16 +745,16 @@ public class QualityFactorsTest {
 
         this.mockMvc.perform(requestBuilder)
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id", is(dtoMetric.getId())))
-                .andExpect(jsonPath("$[0].name", is(dtoMetric.getName())))
-                .andExpect(jsonPath("$[0].description", is(dtoMetric.getDescription())))
-                .andExpect(jsonPath("$[0].value", is(HelperFunctions.getFloatAsDouble(dtoMetric.getValue()))))
-                .andExpect(jsonPath("$[0].value_description", is(String.format("%.2f", dtoMetric.getValue()))))
-                .andExpect(jsonPath("$[0].date[0]", is(dtoMetric.getDate().getYear())))
-                .andExpect(jsonPath("$[0].date[1]", is(dtoMetric.getDate().getMonthValue())))
-                .andExpect(jsonPath("$[0].date[2]", is(dtoMetric.getDate().getDayOfMonth())))
+                .andExpect(jsonPath("$[0].id", is(dtoMetricEvaluation.getId())))
+                .andExpect(jsonPath("$[0].name", is(dtoMetricEvaluation.getName())))
+                .andExpect(jsonPath("$[0].description", is(dtoMetricEvaluation.getDescription())))
+                .andExpect(jsonPath("$[0].value", is(HelperFunctions.getFloatAsDouble(dtoMetricEvaluation.getValue()))))
+                .andExpect(jsonPath("$[0].value_description", is(String.format("%.2f", dtoMetricEvaluation.getValue()))))
+                .andExpect(jsonPath("$[0].date[0]", is(dtoMetricEvaluation.getDate().getYear())))
+                .andExpect(jsonPath("$[0].date[1]", is(dtoMetricEvaluation.getDate().getMonthValue())))
+                .andExpect(jsonPath("$[0].date[2]", is(dtoMetricEvaluation.getDate().getDayOfMonth())))
                 .andExpect(jsonPath("$[0].datasource", is(nullValue())))
-                .andExpect(jsonPath("$[0].rationale", is(dtoMetric.getRationale())))
+                .andExpect(jsonPath("$[0].rationale", is(dtoMetricEvaluation.getRationale())))
                 .andExpect(jsonPath("$[0].confidence80", is(nullValue())))
                 .andExpect(jsonPath("$[0].confidence95", is(nullValue())))
                 .andExpect(jsonPath("$[0].forecastingError", is(nullValue())))
@@ -805,29 +805,29 @@ public class QualityFactorsTest {
     @Test
     public void getMetricsPredictionDataForQF() throws Exception {
         // Given
-        DTOMetric dtoMetric = domainObjectsBuilder.buildDTOMetric();
-        List<DTOMetric> dtoMetricList = new ArrayList<>();
-        dtoMetricList.add(dtoMetric);
+        DTOMetricEvaluation dtoMetricEvaluation = domainObjectsBuilder.buildDTOMetric();
+        List<DTOMetricEvaluation> dtoMetricEvaluationList = new ArrayList<>();
+        dtoMetricEvaluationList.add(dtoMetricEvaluation);
         String factorId = "testingperformance";
         String projectExternalId = "test";
-        when(metricsDomainController.getMetricsForQualityFactorCurrentEvaluation(factorId, projectExternalId)).thenReturn(dtoMetricList);
+        when(metricsDomainController.getMetricsForQualityFactorCurrentEvaluation(factorId, projectExternalId)).thenReturn(dtoMetricEvaluationList);
 
-        dtoMetric.setDatasource("Forecast");
-        dtoMetric.setRationale("Forecast");
+        dtoMetricEvaluation.setDatasource("Forecast");
+        dtoMetricEvaluation.setRationale("Forecast");
         Double first80 = 0.97473043;
         Double second80 = 0.9745246;
         Pair<Float, Float> confidence80 = Pair.of(first80.floatValue(), second80.floatValue());
-        dtoMetric.setConfidence80(confidence80);
+        dtoMetricEvaluation.setConfidence80(confidence80);
         Double first95 = 0.9747849;
         Double second95 = 0.97447014;
         Pair<Float, Float> confidence95 = Pair.of(first95.floatValue(), second95.floatValue());
-        dtoMetric.setConfidence95(confidence95);
+        dtoMetricEvaluation.setConfidence95(confidence95);
 
         String technique = "PROPHET";
         String freq = "7";
         String horizon = "7";
 
-        when(metricsDomainController.getMetricsPrediction(dtoMetricList, projectExternalId, technique, freq, horizon)).thenReturn(dtoMetricList);
+        when(metricsDomainController.getMetricsPrediction(dtoMetricEvaluationList, projectExternalId, technique, freq, horizon)).thenReturn(dtoMetricEvaluationList);
 
         // Perform request
         RequestBuilder requestBuilder = RestDocumentationRequestBuilders
@@ -838,16 +838,16 @@ public class QualityFactorsTest {
 
         this.mockMvc.perform(requestBuilder)
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].id", is(dtoMetric.getId())))
-                .andExpect(jsonPath("$[0].name", is(dtoMetric.getName())))
-                .andExpect(jsonPath("$[0].description", is(dtoMetric.getDescription())))
-                .andExpect(jsonPath("$[0].value", is(HelperFunctions.getFloatAsDouble(dtoMetric.getValue()))))
-                .andExpect(jsonPath("$[0].value_description", is(String.format("%.2f", dtoMetric.getValue()))))
-                .andExpect(jsonPath("$[0].date[0]", is(dtoMetric.getDate().getYear())))
-                .andExpect(jsonPath("$[0].date[1]", is(dtoMetric.getDate().getMonthValue())))
-                .andExpect(jsonPath("$[0].date[2]", is(dtoMetric.getDate().getDayOfMonth())))
-                .andExpect(jsonPath("$[0].datasource", is(dtoMetric.getRationale())))
-                .andExpect(jsonPath("$[0].rationale", is(dtoMetric.getRationale())))
+                .andExpect(jsonPath("$[0].id", is(dtoMetricEvaluation.getId())))
+                .andExpect(jsonPath("$[0].name", is(dtoMetricEvaluation.getName())))
+                .andExpect(jsonPath("$[0].description", is(dtoMetricEvaluation.getDescription())))
+                .andExpect(jsonPath("$[0].value", is(HelperFunctions.getFloatAsDouble(dtoMetricEvaluation.getValue()))))
+                .andExpect(jsonPath("$[0].value_description", is(String.format("%.2f", dtoMetricEvaluation.getValue()))))
+                .andExpect(jsonPath("$[0].date[0]", is(dtoMetricEvaluation.getDate().getYear())))
+                .andExpect(jsonPath("$[0].date[1]", is(dtoMetricEvaluation.getDate().getMonthValue())))
+                .andExpect(jsonPath("$[0].date[2]", is(dtoMetricEvaluation.getDate().getDayOfMonth())))
+                .andExpect(jsonPath("$[0].datasource", is(dtoMetricEvaluation.getRationale())))
+                .andExpect(jsonPath("$[0].rationale", is(dtoMetricEvaluation.getRationale())))
                 .andExpect(jsonPath("$[0].confidence80.first", is(first80)))
                 .andExpect(jsonPath("$[0].confidence80.second", is(second80)))
                 .andExpect(jsonPath("$[0].confidence95.first", is(first95)))
@@ -902,7 +902,7 @@ public class QualityFactorsTest {
 
         // Verify mock interactions
         verify(metricsDomainController, times(1)).getMetricsForQualityFactorCurrentEvaluation(factorId, projectExternalId);
-        verify(metricsDomainController, times(1)).getMetricsPrediction(dtoMetricList, projectExternalId, technique, freq, horizon);
+        verify(metricsDomainController, times(1)).getMetricsPrediction(dtoMetricEvaluationList, projectExternalId, technique, freq, horizon);
         verifyNoMoreInteractions(metricsDomainController);
     }
 }
